# BulletJournal-Controller

./: .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  INSTANCE_FORMAT.md  OPERATIONS.md  PROJECT_ENVIRONMENT.md  SECURITY.md  TROUBLESHOOTING.md
src/bulletjournal_controller/: __init__.py  __main__.py  config.py  utils.py
src/bulletjournal_controller/_web/: index.html
src/bulletjournal_controller/api/: __init__.py  app.py  auth.py  deps.py  errors.py  proxy.py  schemas.py
src/bulletjournal_controller/cli/: app.py  build_runtime.py  cleanup_instance.py  create_user.py  dev.py  doctor.py  export_project.py  import_project.py  init_instance.py  reconcile.py  start.py
src/bulletjournal_controller/defaults/: runtime.json
src/bulletjournal_controller/domain/: __init__.py  enums.py  errors.py  models.py  rules.py
src/bulletjournal_controller/runtime/: __init__.py  docker_adapter.py  healthcheck.py  installer.py
tests/: conftest.py
tests/api/: test_auth_api.py  test_projects_api.py
tests/integration/: test_export_import.py
tests/unit/: test_auth_service.py  test_create_user_cli.py  test_docker_adapter.py  test_environment_service.py  test_installer.py  test_instance_fs.py  test_job_service.py  test_metrics_service.py  test_project_service.py  test_proxy_auth_rules.py  test_proxy_redirects.py  test_proxy_service.py  test_reconcile_service.py  test_repositories.py  test_rules.py  test_runtime_service.py  test_start.py  test_state_db.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.tsx
(+34 files in other folders)
