[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "bulletjournal-controller"
version = "0.1.0"
description = "Multi-project control plane for bulletjournal-editor runtimes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Agoratlas", email = "contact@agoratlas.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
bulletjournal-controller = "bulletjournal_controller.cli.app:app"

[project.urls]
Homepage = "https://github.com/Agoratlas/BulletJournal-Controller"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bulletjournal_controller = [
    "_web/**/*",
    "defaults/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
